[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Images/TetrisBanner.png" type="Texture" id=1]
[ext_resource path="res://Assets/Videos/RetmisMainMenuVideo.webm" type="VideoStream" id=2]
[ext_resource path="res://Scenes/UI/MainMenu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Scenes/UI/MainMenu/VideoPlayerScript.gd" type="Script" id=4]
[ext_resource path="res://Scenes/UI/Themes/RetmisTheme.tres" type="Theme" id=5]
[ext_resource path="res://assets/music/RetmisTheme.mp3" type="AudioStream" id=6]
[ext_resource path="res://Scenes/UI/MainMenu/SettingsMenu/SettingsMenu.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/UI/MainMenu/OpenPopupTween.gd" type="Script" id=8]
[ext_resource path="res://Scenes/UI/MainMenu/NewGameMenu/NewGame.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/UI/MainMenu/Scoreboard/Scoreboard.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/UI/MainMenu/MusicVolumeTween.gd" type="Script" id=11]

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
theme = ExtResource( 5 )
script = ExtResource( 3 )

[node name="VideoPlayer" type="VideoPlayer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
stream = ExtResource( 2 )
autoplay = true
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.501
anchor_top = 0.362
anchor_right = 0.501
anchor_bottom = 0.362
margin_left = -523.024
margin_top = -282.2
margin_right = 523.976
margin_bottom = 281.8
rect_pivot_offset = Vector2( 523, 282 )
texture = ExtResource( 1 )
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.5
margin_top = 60.0
margin_right = 165.5
margin_bottom = 128.0
alignment = 1

[node name="StartButton" type="Button" parent="VBoxContainer"]
margin_right = 331.0
margin_bottom = 16.0
focus_neighbour_top = NodePath("../QuitButton")
focus_neighbour_bottom = NodePath("../ScoreboardButton")
theme = ExtResource( 5 )
text = "New Game"

[node name="ScoreboardButton" type="Button" parent="VBoxContainer"]
margin_top = 20.0
margin_right = 331.0
margin_bottom = 36.0
focus_neighbour_top = NodePath("../StartButton")
focus_neighbour_bottom = NodePath("../SettingsButton")
text = "Scoreboard"

[node name="SettingsButton" type="Button" parent="VBoxContainer"]
margin_top = 40.0
margin_right = 331.0
margin_bottom = 56.0
focus_neighbour_top = NodePath("../ScoreboardButton")
focus_neighbour_bottom = NodePath("../QuitButton")
text = "Settings"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 331.0
margin_bottom = 76.0
focus_neighbour_top = NodePath("../SettingsButton")
focus_neighbour_bottom = NodePath("../StartButton")
text = "Quit"

[node name="NewGameMenu" parent="." instance=ExtResource( 9 )]
rect_pivot_offset = Vector2( 720, 0 )

[node name="ScoreboardMenu" parent="." instance=ExtResource( 10 )]
rect_pivot_offset = Vector2( 720, 0 )

[node name="SettingsMenu" parent="." instance=ExtResource( 7 )]
visible = false
rect_pivot_offset = Vector2( 720, 0 )

[node name="MusicPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "Music"

[node name="OpenPopupTween" type="Tween" parent="."]
script = ExtResource( 8 )

[node name="MusicVolumeTween" type="Tween" parent="."]
script = ExtResource( 11 )

[connection signal="resized" from="." to="VideoPlayer" method="_on_MainMenu_resized"]
[connection signal="pressed" from="VBoxContainer/StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ScoreboardButton" to="." method="_on_ScoreboardButton_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="finished" from="MusicPlayer" to="." method="_on_AudioStreamPlayer_finished"]
